Update Basic Docs

--- a/Getting Started/index.html
+++ b/Getting Started/index.html
@@ -737,7 +737,7 @@ To get an API key, head over to <a href="register/">Register</a> and follow the 
 </tbody>
 </table>
 <h2 id="base-url">Base URL</h2>
-<p>Currently, the Base URL is <code>https://api-beta.pgamerx.com</code>, but after ~2 weeks, it will be shifted to <code>https://api.pgamerx.com</code>. </p>
+<p>Currently, the Base URL is <code>https://random-stuff-api.p.rapidapi.com/ai</code>, but you need to add the following header to each request: <code>x-rapidapi-host</code> and <code>x-rapidapi-key</code>. For full code examples, checkout https://rapidapi.com/pgamerxdev/api/random-stuff-api </p>
 
               
             </article>
